# hungerlib

./: pyproject.toml  version.yaml
.github/workflows/: release.yml
src/hungerlib/: __init__.py  bridgeclient.py  configloader.py  discord_bot_webhook.py  messagerouter.py  panel.py  validator.py
src/hungerlib/api/: __init__.py  backups.py  command.py  databases.py  filemanager.py  schedule.py  startup.py
src/hungerlib/email/: __init__.py  client.py  manager.py  message.py  user.py
src/hungerlib/email/email_templates/: restart.html
src/hungerlib/servers/: __init__.py  generic.py  minecraft.py
src/hungerlib/utils/: __init__.py  exceptions.py  time.py
src/hungerlib/utils/maps/: timemaps.py
