[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hungerlib"
version = "0.0.0"
description = "Powerful automation library for Pterodactyl."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "iFamished" }
]

keywords = [
    "pterodactyl",
    "minecraft",
    "automation",
    "rcon",
    "server-management",
    "hungerlib",
    "hungernet"
]

dependencies = [
    "requests",
    "mcrcon",
    "PyYaml",
    "mapres",
    "jinja2",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/iFamishedX/HungerLib"
Documentation = "https://github.com/iFamishedX/HungerLib"
Source = "https://github.com/iFamishedX/HungerLib"
Issues = "https://github.com/iFamishedX/HungerLib/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"hungerlib.email" = ["email_templates/*.html"]
